# Corehold

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
Corehold/: corehold.json
src/: NsHiJack.h  clrloader.cpp  clrloader.h  config.h  dllmain.c  dllmain.cpp  downloader.cpp  downloader.h  init.cpp  init.h  resource.h  test_main.cpp  unzipper.cpp  unzipper.h  winmm.c  winmm.def  winmm.h  winmm.rc
src/utils/: clrloader.cpp  clrloader.h  downloader.cpp  downloader.h  unzipper.cpp  unzipper.h
